--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -1,8 +1,7 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule:
-    - cron: "* */12 * * *"
+  schedule: [{cron: "0 0 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
@@ -13,6 +12,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: JoeyHawke/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
